Add WeMo support

--- a/dist.ini
+++ b/dist.ini
@@ -18,3 +18,6 @@ Test::Most = 0
 DBD::SQLite = 0
 DateTime::Format::SQLite = 0
 DBIx::Class::DeploymentHandler = 0
+WebService::Belkin::WeMo::Device = 0
+WebService::Belkin::WeMo::Discover = 0
+JSON::Parse = 0
