--- a/dist.ini
+++ b/dist.ini
@@ -21,3 +21,4 @@ DBIx::Class::DeploymentHandler = 0
 WebService::Belkin::WeMo::Device = 0
 WebService::Belkin::WeMo::Discover = 0
 JSON::Parse = 0
+Schedule::Cron = 0
