--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
-name    = Home Automation Daemon
+name    = UchiSan
 author  = Alastair D'Silva <alastair@d-silva.org>
-license = GPL
+license = GPL_3
 copyright_holder = Alastair D'Silva
 copyright_year   = 2016
 abstract = MQTT based home automation
@@ -14,6 +14,7 @@ DBIx::Class::Migration = 0
 TOML = 0
 AnyEvent::OWNet = 0
 AnyEvent::MQTT = 0
+AnyEvent::AIO = 0
 Test::Most = 0
 DBD::SQLite = 0
 DateTime::Format::SQLite = 0
@@ -22,3 +23,6 @@ WebService::Belkin::WeMo::Device = 0
 WebService::Belkin::WeMo::Discover = 0
 JSON::Parse = 0
 Schedule::Cron = 0
+AnyEvent::HTTPD = 0
+HTML::Template::Pro = 0
+MIME::Types = 0
