--- a/ha.toml
+++ b/ha.toml
@@ -12,6 +12,9 @@
 [mqtt]
 	host="localhost"
 	port=1883
+	websocket_host="localhost"
+	websocket_port=8081
+
 
 [database]
 	dsn="dbi:SQLite:ha.db"
@@ -21,3 +24,6 @@
 [wemo]
 	debug=0
 	switch_period=1 # seconds
+
+[http]
+	port=8080
