Prune away bits that don't relate to MQTT or OWFS
Signed-off-by: Alastair D'Silva <alastair@d-silva.org>

--- a/dist.ini
+++ b/dist.ini
@@ -1,28 +1,17 @@
-name    = UchiSan
+name    = OWFS_MQTT_Bridge
 author  = Alastair D'Silva <alastair@d-silva.org>
 license = GPL_3
 copyright_holder = Alastair D'Silva
-copyright_year   = 2016
+copyright_year   = 2018
 abstract = MQTT based home automation
 
 version = 0.001
 
 [@Basic]
 [Prereqs]
-DBIx::Class = 0
-DBIx::Class::Migration = 0
 TOML = 0
 AnyEvent::OWNet = 0
 AnyEvent::MQTT = 0
 AnyEvent::AIO = 0
 Test::Most = 0
-DBD::SQLite = 0
-DateTime::Format::SQLite = 0
-DBIx::Class::DeploymentHandler = 0
-WebService::Belkin::WeMo::Device = 0
-WebService::Belkin::WeMo::Discover = 0
 JSON::Parse = 0
-Schedule::Cron = 0
-AnyEvent::HTTPD = 0
-HTML::Template::Pro = 0
-MIME::Types = 0
