Update perl dest for distzilla
Signed-off-by: Alastair D'Silva <alastair@d-silva.org>

--- a/dist.ini
+++ b/dist.ini
@@ -15,3 +15,7 @@ AnyEvent::MQTT = 0
 AnyEvent::AIO = 0
 Test::Most = 0
 JSON::Parse = 0
+AnyEvent = 0
+File::Slurp = 0
+DateTime::Format::Strptime = 0
+
